# BlueLedger

./: .all-contributorsrc  .gitignore  README.md  aoi.geojson  config.yaml  config_loader.py  contributor.md  data_quality.py  main.py  package-lock.json  requirements.txt
backend/: .env.example  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/migrations/: 20260308124755_init.up.sql
backend/src/: db.ts  index.ts  lib.rs  model.ts
backend/src/models/: jwt.rs
backend/src/routes/: handlers.rs
py-interface/: .gitignore  Dockerfile  README.Docker.md  aoi.geojson  api-documentation.md  api.py  carbon_calculator.py  carbon_credit_pipeline.py  change_detection.py  compose.yaml  config.yaml  config_loader.py  data_quality.py  eligibility.py  main.py  raster_processing.py  requirements.txt  satellite_data.py  test_all.py  visualization.py
server/: Cargo.toml  README.md
server/src/: config.rs  lib.rs
server/src/middleware/: auth.rs
server/src/models/: geojson.rs  mod.rs  users.rs
server/src/routes/: handlers.rs
server/src/state/: state.rs
