[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
bcrypt = "0.19.0"
dotenvy = "0.15.7"
env_logger = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros", "migrate", "uuid" ] }
uuid = { version = "1.22.0", features = [ "v4", "serde" ] }
